[gd_scene load_steps=5 format=3 uid="uid://b8kjpieig1f3b"]

[ext_resource type="Script" uid="uid://crgsqggfnevng" path="res://Scripts/hud.gd" id="1_hud"]
[ext_resource type="FontFile" uid="uid://bma1icmk6wow4" path="res://Assets/fonts/PixelOperator8.ttf" id="2_font"]
[ext_resource type="FontFile" uid="uid://p71svfp1bvck" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="3_boldfont"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hud_panel"]
bg_color = Color(0.1, 0.12, 0.18, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.4, 0.5, 0.6)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="CoinsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hud_panel")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopBar/CoinsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar/CoinsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="Label" parent="MarginContainer/VBoxContainer/TopBar/CoinsPanel/MarginContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_boldfont")
theme_override_font_sizes/font_size = 18
text = "Coins"

[node name="CoinsLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/CoinsPanel/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8509804, 0.3019608, 1)
theme_override_fonts/font = ExtResource("3_boldfont")
theme_override_font_sizes/font_size = 18
text = "0"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="RodPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hud_panel")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopBar/RodPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="RodLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/RodPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.9, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "Rod Lv 1 | Max: 1.5kg"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="AreaPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hud_panel")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/BottomBar/AreaPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="AreaLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar/AreaPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "Pond"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="BucketPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hud_panel")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/BottomBar/BucketPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="BucketLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar/BucketPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.85, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "Fish: 0/10"

[node name="ShopButton" type="Button" parent="MarginContainer/VBoxContainer/BottomBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 36)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)
theme_override_fonts/font = ExtResource("3_boldfont")
theme_override_font_sizes/font_size = 14
text = "SHOP"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomBar/ShopButton" to="." method="_on_shop_button_pressed"]
